# Ecommerce

./: .env.fast-ecomdb  README.md  docker-compose.yaml
ecom/: .env.fast-ecom  Dockerfile  entrypoint.sh  pyproject.toml
ecom/src/: main.py
ecom/src/settings/: conf.py  database.py
