[tool.poetry]
name = "ecom"
version = "0.1.0"
description = "Ecommerce API project"
authors = ["Vitaly Sofronyuk <Gilion@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
